Fixed: File upload help text is wrapped and overflow in small resolution (bug#14482).

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Default.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Default.css
@@ -375,13 +375,17 @@ div.DnDUploadBox {
 div.DnDUpload {
     border: 1px solid #ccc;
     color: #aaa;
-    height: 60px;
-    line-height: 85px;
+    min-height: 60px;
     text-align: center;
     position: relative;
     margin-bottom: 5px;
     max-width: 622px;
     box-sizing: border-box;
+}
+
+span.ReadyForUpload {
+    padding: 30px 0px 5px;
+    display: block;
 }
 
 div.DnDUpload:focus {
